<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="32dp">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="120dp"
        android:src="@drawable/leftarrow" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/account"
        android:textAllCaps="false"
        android:textColor="@color/colorOrange"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/First_Name"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text_view"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"/>

    <EditText
        android:id = "@+id/editText1"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "numberPassword"
        android:layout_marginBottom="20sp"
        android:hint="@string/Password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password_text_view"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"/>

    <EditText
        android:id = "@+id/editText2"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "numberPassword"
        android:layout_marginBottom="20sp"
        android:hint="@string/password"/>


    <Button
        android:id="@+id/next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:onClick="Next"
        android:text="@string/Next"
        android:textColor="@color/colorLightWhite"
        android:textSize="32sp"
        android:layout_marginTop="60dp"/>

</LinearLayout>
</ScrollView>